--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+===========================================================
+THIS IS UNOFFICIAL PUBLIC REPOSITORY OF OSU MICROBENCHMARKS
+===========================================================
+
+
 OMB (OSU Micro-Benchmarks)
 --------------------------
 The OSU Micro-Benchmarks use the GNU build system. Therefore you can simply
